manifest/objects/SDF_TGF_Trigger_Config__mdt.object
<CustomObject>
    <description>Stores the configurations for all the triggers handlers</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>API name of the trigger handler class</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable / disable the trigger handler execution</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>API name of the object to which the trigger handler belongs</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order of the trigger handler in execution</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trigger Configuration</label>
    <listViews>
        <fullName>Full_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Object__c</columns>
        <columns>Class__c</columns>
        <columns>Order__c</columns>
        <columns>Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full View</label>
    </listViews>
    <pluralLabel>Trigger Configurations</pluralLabel>
</CustomObject>